--- a/01-Android/app/src/main/res/values-es/strings.xml
+++ b/01-Android/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">MovilesComp2023A</string>
+    <string name="bienvenida">Bienvenida</string>
+    <color name="color_fondo">#000000</color>
 </resources>
